# showerv3

./: .gitignore  README.md  ashby_response.html  env.example  pyproject.toml  render.yaml  requirements.txt  run_worker.py  scrapy.cfg  start-prod.cmd  start.cmd  start_server.py  test_import.py
alembic/: env.py
app/: main.py
docs/: workday-autofill-engine-plan.md
extension/: README.md  background.js  manifest.json  sidepanel.html  styles.css
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-v1/: index.html  package-lock.json  vite.config.ts
scripts/: fetch_ashby_response.py  lan_urls.py  open_lan_firewall.ps1
tests/: conftest.py  test_ai_parser_prepare.py  test_api_detector.py  test_ashby_api_extractor.py  test_auth_email.py  test_autofill_parse.py  test_company_name_utils.py  test_company_policy.py  test_cover_letter_prompt_settings.py  test_cover_letter_template_validation.py  test_date_bounds.py  test_extraction_failure_handler.py  test_extraction_merge.py  test_extraction_service.py  test_google_sheets_service.py  test_greenhouse_board_extractor.py  test_html_extractor.py  test_integration.py  test_invalid_jobs_categories.py  test_job_content_cleaner.py  test_job_exclusion_types.py  test_job_field_utils.py  test_job_location_classifier.py  test_post_analysis_dedup.py  test_profile_evidence_service.py  test_profile_source_document_service.py  test_resume_template_validation.py  test_resume_text_format.py  test_schemas.py  test_scraper_sync_service.py  test_signup_signin.py  test_submit_queue_dedup.py  (+3 more)
(+374 files in other folders)
